feat(assets): implement minio and s3 asset management storage strategy with e2e testing
